// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article flag 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <IconDiamond
      fillColour="black"
      height={8}
      width={8}
    />
  </View>
  <Text
    accessibilityLabel="No Colour Flag"
    style={
      Array [
        Object {
          "fontFamily": "TimesDigitalW04-RegularSC",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.4,
        },
        Object {
          "color": "black",
        },
      ]
    }
    testID="flag-No Colour"
  >
    no colour
  </Text>
</View>
`;

exports[`2. red article flag 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <IconDiamond
      fillColour="red"
      height={8}
      width={8}
    />
  </View>
  <Text
    accessibilityLabel="Coloured Red Flag"
    style={
      Array [
        Object {
          "fontFamily": "TimesDigitalW04-RegularSC",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.4,
        },
        Object {
          "color": "red",
        },
      ]
    }
    testID="flag-Coloured Red"
  >
    coloured red
  </Text>
</View>
`;
